# fastgg

./: LICENSE  README.md  pyproject.toml
fastgg/: cli.py
fastgg_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
